--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h3 class="flashy"> This is NOT a dating site! </h3>
     <h3> Just choose a woman and ask to fuck! </h3>
     <img src="/landings/170682/1567418884/images/1.gif" alt="girl" class="girl">
-    <h4 class="popup_text"> Please keep their identities secret! <p></p><a href="https://securecloud-smart.com/?a=84914&c=174995&s1=ORATURU&s2=ANAKBROBOT" class="ok btn tr-submit-button"> CONTINUE </a></h4>
+    <h4 class="popup_text"> Please keep their identities secret! <p></p><a href="https://quickdates8.com/oncbqpjikzbrfg?t=R.A.D" class="ok btn tr-submit-button"> CONTINUE </a></h4>
    </div>
   </div>
  </body>
