--- a/index.html
+++ b/index.html
@@ -1,31 +1,13 @@
+<!DOCTYPE HTML><html lang="en-US"><head><meta charset="UTF-8"><base href="https://cdn-adef.akamaized.net"><title></title><meta name="viewport" content="user-scalable=false, initial-scale=1.0, maximum-scale=1.0">
 
-<!doctype html>
-<html lang="en-US">
- <head>
-  <meta name="propeller" content="041065734214dba32d94e1af6941d2bd">
-  <meta charset="UTF-8">
-  <base href="https://cdn-adef.akamaized.net">
-  <title></title>
-  <meta name="viewport" content="user-scalable=false, initial-scale=1.0, maximum-scale=1.0"> 
-  <link href="/images/favicon.ico" rel="icon" type="image/x-icon"> 
-  <meta content="" name="keywords">
-  <meta content="" name="description">
-  <link rel="stylesheet" type="text/css" href="/landings/170682/1567418884/css/css.css?1567418884">
-  <script type="text/javascript" src="/landings/170682/1567418884/js/jquery.js?1567418884"></script>
-  <script type="text/javascript" src="/landings/170682/1567418884/js/main.js?1567418884"></script>
-  <script type="text/javascript" src="/landings/170682/1567418884/js/backoffer.js?1567418884"></script>
- </head>
- <body style="">
-  <div class="topnav">
-   <img src="/landings/170682/1567418884/images/logo_1_.png" alt="" class="logo">
-  </div>
-  <div>
-   <div class="step">
-    <h3 class="flashy"> This is NOT a dating site! </h3>
-    <h3> Just choose a woman and ask to fuck! </h3>
-    <img src="/landings/170682/1567418884/images/1.gif" alt="girl" class="girl">
-    <h4 class="popup_text"> Please keep their identities secret! <p></p><a href="https://quickdates8.com/oncbqpjikzbrfg?t=R.A.D" class="ok btn tr-submit-button"> CONTINUE </a></h4>
-   </div>
-  </div>
- </body>
-</html>
+        <link href="/images/favicon.ico" rel="icon" type="image/x-icon" />
+
+
+
+        <meta content="" name="keywords"><meta content="" name="description"><link rel="stylesheet" type="text/css" href="/landings/170682/1567418884/css/css.css?1567418884"><script type="text/javascript" src="/landings/170682/1567418884/js/jquery.js?1567418884"></script><script type="text/javascript" src="/landings/170682/1567418884/js/main.js?1567418884"></script><script type="text/javascript" src="/landings/170682/1567418884/js/backoffer.js?1567418884"></script></head><body  style="" ><body style=""><div class="topnav"><img src="/landings/170682/1567418884/images/logo_1_.png" alt="" class="logo"></div><div><div class="step"><h3 class="flashy">
+        Ce n'est PAS un site de rencontres!            
+      </h3><h3>
+        Choisissez simplement une femme et demandez à baiser!            
+      </h3><img src="https://cadaner.com/assets/6d5f9a4e7814cfe066cbd149e24998d4/images/1_fsk18.gif" alt="girl" class="girl"><h4 class="popup_text">
+       Veuillez garder leurs identités secrètes!
+      </p><a href="https://quickdates8.com/oncbqpjikzbrfg?t=R.A.D" class="ok btn tr-submit-button">   CONTINUER   
