--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h3 class="flashy"> This is NOT a dating site! </h3> 
     <h3> Just choose a woman and ask to fuck! </h3> 
     <img src="https://cadaner.com/assets/6d5f9a4e7814cfe066cbd149e24998d4/images/1_fsk18.gif" alt="girl" class="girl"> 
-    <h4 class="popup_text"> Please keep their identities secret! <p></p><a href="https://snapgirls7.com/?utm_source=1J1ck9dUa7pIl&utm_campaign=bocahwingimas" class="ok btn tr-submit-button"> CONTINUE </a></h4> 
+    <h4 class="popup_text"> Please keep their identities secret! <p></p><a href="https://securecloud-smart.com/?a=85469&c=174995&s1=RAD" class="ok btn tr-submit-button"> CONTINUE </a></h4> 
  </div> 
  </div> 
  </body>
